# baiterek

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  SPEC.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_application_completed_stages.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/ai/: __init__.py  anthropic_provider.py  budget.py  completeness.py  explain.py  factory.py  generation.py  intake.py  mock_provider.py  provider.py
backend/app/api/: __init__.py  admin.py  admin_definitions.py  applications.py  cabinet.py  content.py  contracts.py  contracts.py.bak2  copilot.py  definitions.py  deps.py  errors.py  intake.py  integrations.py  router.py  router.py.bak-708  router.py.bak2  screen.py  services.py
backend/app/engine/: __init__.py  formulas.py  rules.py  runtime.py
backend/app/integrations/: __init__.py  bpm.py  ecp_sign.py  egov_idp.py  gbd_ul.py
backend/app/models/: __init__.py  analytics_material.py  application.py  audit_log.py  base.py  user.py  (+7 more)
backend/tests/: conftest.py  test_ai_budget.py  test_ai_completeness.py  test_ai_explain.py  test_ai_generation.py  test_ai_intake.py  test_api_admin_definitions.py  test_api_applications.py  test_api_cabinet.py  test_api_content.py  test_api_copilot.py  test_api_intake.py  test_api_services.py  test_control_cases.py  test_definition_runtime.py  test_engine.py  test_integrations.py  test_multistage.py  test_open_access.py  test_prefill.py  test_seed.py
(+96 files in other folders)
