[project]
name = "baiterek-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "pydantic>=2.9,<3", "pydantic-settings>=2.5,<3", "sqlalchemy[asyncio]>=2,<3", "asyncpg>=0.29,<1", "alembic>=1.13,<2", "uvicorn>=0.30,<1", "httpx>=0.27,<1"]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-asyncio>=0.24,<2", "httpx>=0.27,<1"]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<2", "httpx>=0.27,<1", "ruff>=0.6,<1", "mypy>=1.11,<2"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
